# muna-server

./: .env.example  .gitignore  Cargo.toml  Changelog.md  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/handlers/: completions.rs  embeddings.rs  health.rs  mod.rs  models.rs  not_found.rs
